# actix-ddd

./: .gitignore  Cargo.toml  docker-compose.yaml  readme.md
migrations/2024-07-19-124003_create_user_table/: down.sql  up.sql
src/: lib.rs  main.rs
src/application/: mod.rs
src/application/dto/: mod.rs  new_user_dto.rs
src/application/use_cases/: get_user.rs  mod.rs  register_user.rs
src/domain/entities/: user.rs
src/domain/repositories/: user_repository.rs
src/domain/services/: mod.rs  user_service.rs
src/infrastructure/: mod.rs  web.rs
src/infrastructure/db/: connection.rs
src/infrastructure/repositories/: mod.rs  pg_user_repository.rs
src/infrastructure/servers/: actix.rs
src/presentation/handlers/: mod.rs  user_handler.rs
src/presentation/routes/: user_routes.rs
